[gd_scene load_steps=16 format=3 uid="uid://bcagtkac1w1ab"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_jke2s"]
[ext_resource type="Texture2D" uid="uid://cn6rbixww144u" path="res://icons/catadv_hud_main.png" id="2_o8s5j"]
[ext_resource type="Texture2D" uid="uid://dfyty6tqvh36p" path="res://icons/catadv_hud_ritm.png" id="3_x8o2c"]
[ext_resource type="AudioStream" uid="uid://b24yddctg14ur" path="res://sounds/Redeem.mp3" id="4_gaug1"]
[ext_resource type="Texture2D" uid="uid://dd67xylhup2e1" path="res://icons/catadv_heart2.png" id="5_rqk6l"]
[ext_resource type="Texture2D" uid="uid://b3yrl738w82ol" path="res://icons/catadv_heart1.png" id="6_83r13"]

[sub_resource type="Animation" id="Animation_p36hc"]
resource_name = "ACtive"
length = 4.80001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ritm_bar:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_qxke8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ritm_bar:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xq0rv"]
resource_name = "noActive"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ritm_bar:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e63ob"]
_data = {
"ACtive": SubResource("Animation_p36hc"),
"RESET": SubResource("Animation_qxke8"),
"noActive": SubResource("Animation_xq0rv")
}

[sub_resource type="Animation" id="Animation_mnh6s"]
resource_name = "damage_take"
length = 1.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_voan5"]
resource_name = "reality_off"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_sm6px"]
resource_name = "reality_on"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wlhgo"]
resource_name = "regeneraion"
length = 1.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7vox6"]
_data = {
"damage_take": SubResource("Animation_mnh6s"),
"reality_off": SubResource("Animation_voan5"),
"reality_on": SubResource("Animation_sm6px"),
"regeneraion": SubResource("Animation_wlhgo")
}

[node name="HUD" type="Control"]
modulate = Color(0.560784, 0.960784, 0.933333, 1)
self_modulate = Color(0.67451, 0.94902, 0.854902, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_jke2s")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 61
follow_viewport_scale = 1.23

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color(0.318788, 0.595077, 0.534402, 1)
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -78.0
offset_right = 170.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 10
auto_translate = false
localize_numeral_system = false
focus_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "       TEXT@/"
fit_content = true
scroll_active = false
autowrap_mode = 1
tab_size = 0
selection_enabled = true
visible_characters_behavior = 2
text_direction = 3

[node name="main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -95.0
offset_right = 192.0
grow_horizontal = 2
grow_vertical = 0

[node name="main_window" type="Sprite2D" parent="CanvasLayer/main"]
position = Vector2(192, -49)
scale = Vector2(4, 3)
texture = ExtResource("2_o8s5j")

[node name="ritm_bar" type="Sprite2D" parent="CanvasLayer/main"]
position = Vector2(192, -48.92)
scale = Vector2(4, 3)
texture = ExtResource("3_x8o2c")
hframes = 7
vframes = 7
frame = 1

[node name="ritm_anim" type="AnimationPlayer" parent="CanvasLayer/main/ritm_bar"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_e63ob")
}
speed_scale = 4.9

[node name="Time_vzaimodeystvia" type="Timer" parent="CanvasLayer/main/ritm_bar"]
wait_time = 0.39
one_shot = true

[node name="Timer" type="Timer" parent="CanvasLayer/main/ritm_bar"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/main/ritm_bar"]
stream = ExtResource("4_gaug1")

[node name="Time_window_anim" type="Timer" parent="CanvasLayer/main/ritm_bar"]
wait_time = 0.87
one_shot = true

[node name="Replay" type="Timer" parent="CanvasLayer/main/ritm_bar"]
wait_time = 0.1
one_shot = true

[node name="Window_perfect_time" type="Node2D" parent="CanvasLayer/main/ritm_bar"]

[node name="good_time" type="Timer" parent="CanvasLayer/main/ritm_bar/Window_perfect_time"]
wait_time = 0.258
one_shot = true

[node name="perfect_time" type="Timer" parent="CanvasLayer/main/ritm_bar/Window_perfect_time"]
wait_time = 0.129
one_shot = true

[node name="bad_time" type="Timer" parent="CanvasLayer/main/ritm_bar/Window_perfect_time"]
wait_time = 0.38
one_shot = true

[node name="heart1" type="Sprite2D" parent="CanvasLayer/main"]
position = Vector2(188, -49)
scale = Vector2(4, 3)
texture = ExtResource("5_rqk6l")
hframes = 4
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/main/heart1"]
libraries = {
"": SubResource("AnimationLibrary_7vox6")
}
speed_scale = 2.0

[node name="Time_redeem_heart_1" type="Timer" parent="CanvasLayer/main/heart1"]
wait_time = 0.3
one_shot = true

[node name="heart2" type="Sprite2D" parent="CanvasLayer/main"]
position = Vector2(192, -49)
scale = Vector2(4, 3)
texture = ExtResource("6_83r13")
hframes = 4
vframes = 4
frame = 1

[node name="Time_redeem_heart_2" type="Timer" parent="CanvasLayer/main/heart2"]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/main/heart2"]
libraries = {
"": SubResource("AnimationLibrary_7vox6")
}
speed_scale = 2.0

[node name="heart3" type="Sprite2D" parent="CanvasLayer/main"]
position = Vector2(336, -49)
scale = Vector2(4, 3)
texture = ExtResource("5_rqk6l")
hframes = 4
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/main/heart3"]
libraries = {
"": SubResource("AnimationLibrary_7vox6")
}
speed_scale = 2.0

[connection signal="timeout" from="CanvasLayer/main/ritm_bar/Time_vzaimodeystvia" to="." method="_on_time_vzaimodeystvia_timeout"]
[connection signal="timeout" from="CanvasLayer/main/ritm_bar/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/main/ritm_bar/Time_window_anim" to="." method="_on_time_window_anim_timeout"]
[connection signal="timeout" from="CanvasLayer/main/ritm_bar/Replay" to="." method="_on_replay_timeout"]
[connection signal="timeout" from="CanvasLayer/main/ritm_bar/Window_perfect_time/good_time" to="." method="_on_good_time_timeout"]
[connection signal="timeout" from="CanvasLayer/main/ritm_bar/Window_perfect_time/perfect_time" to="." method="_on_perfect_time_timeout"]
[connection signal="timeout" from="CanvasLayer/main/ritm_bar/Window_perfect_time/bad_time" to="." method="_on_bad_time_timeout"]
[connection signal="timeout" from="CanvasLayer/main/heart1/Time_redeem_heart_1" to="." method="_on_time_redeem_heart_1_timeout"]
[connection signal="timeout" from="CanvasLayer/main/heart2/Time_redeem_heart_2" to="." method="_on_time_redeem_heart_2_timeout"]
